--- a/myapp/app/src/main/res/layout/activity_ingredients.xml
+++ b/myapp/app/src/main/res/layout/activity_ingredients.xml
@@ -7,10 +7,33 @@
     tools:context="com.example.luanna.myapp.Ingredients">
 
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/app_name"
-        android:textSize="50sp"/>
+        android:layout_margin="8dp">
+
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/btn_add_ingredient"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:layout_margin="16dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            app:fabSize="normal"
+            app:srcCompat="@color/colorAccent" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_ingredients"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+
+        </android.support.v7.widget.RecyclerView>
+    </RelativeLayout>
 
 </LinearLayout>
