--- a/myapp/app/src/main/res/layout/recipe_layout.xml
+++ b/myapp/app/src/main/res/layout/recipe_layout.xml
@@ -16,8 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:contentDescription="@string/app_recipes"
-            android:scaleType="centerCrop"
-            android:layout_marginBottom="8dp"
+            android:scaleType="fitCenter"
+            android:layout_margin="8dp"
             android:src="@drawable/imgtest" />
         
         <TextView
@@ -26,11 +26,12 @@
             android:layout_height="match_parent"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textSize="36sp"
+            android:textSize="28sp"
+            android:textAllCaps="true"
             android:text="@string/app_name"
             android:textStyle="bold" />
-
     </LinearLayout>
+
 
 </android.support.v7.widget.CardView>
 
