--- a/myapp/app/src/main/res/layout/add_recipe.xml
+++ b/myapp/app/src/main/res/layout/add_recipe.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"    >
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
     <LinearLayout
@@ -47,6 +47,14 @@
                 android:textColor="@color/colorWhite"
                 android:textSize="14sp" />
 
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/a_r_price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/price_sell"
+                android:padding="8dp"
+                android:textSize="16dp" />
+
 
             <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
@@ -56,44 +64,40 @@
                 android:rowCount="4">
 
                 <TextView
-                    android:id="@+id/ar_ingridient"
+                    android:id="@+id/a_r_ingridient"
                     android:layout_columnSpan="3"
                     android:layout_gravity="fill"
-                    android:padding="2dp"
+                    android:padding="4dp"
                     android:text="@string/app_ingredients"
                     android:textSize="16dp"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/r_portion"
+                    android:id="@+id/a_r_portion"
                     android:layout_columnSpan="1"
-                    android:padding="2dp"
+                    android:padding="4dp"
                     android:text="@string/quantity"
                     android:textSize="16dp"
                     android:textStyle="bold" />
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/ar_ingridient"
+                    android:id="@+id/a_r_ingridient"
                     android:layout_columnSpan="3"
                     android:layout_gravity="fill"
                     android:hint="@string/app_ingredients"
-                    android:padding="2dp"
+                    android:padding="4dp"
                     android:textSize="16dp" />
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/r_portion"
+                    android:id="@+id/a_r_portion"
                     android:layout_columnSpan="1"
                     android:hint="@string/quantity"
-                    android:padding="2dp"
+                    android:padding="4dp"
                     android:textSize="16dp" />
 
 
             </GridLayout>
 
-            <Spinner
-                android:id="@+id/spinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
 
             <Button
                 android:id="@+id/btn_add_ingredient"
