--- a/myapp/app/src/main/res/values/styles.xml
+++ b/myapp/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="AppThemes" parent="android:Theme.Material">
+    <style name="AppThemes" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
