--- a/myapp/app/src/main/res/layout/activity_ingredients.xml
+++ b/myapp/app/src/main/res/layout/activity_ingredients.xml
@@ -4,13 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.luanna.myapp.Ingredients">
-
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="8dp">
+        android:layout_height="match_parent">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -18,15 +17,16 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
             android:elevation="8dp"
+            app:title="@string/app_ingredients"
             app:titleTextColor="@color/colorWhite" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/btn_add_ingredient"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:clickable="true"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
+            android:clickable="true"
             app:fabSize="normal"
             app:useCompatPadding="true" />
 
@@ -34,12 +34,9 @@
             android:id="@+id/rv_ingredients"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="vertical"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
-
-        </android.support.v7.widget.RecyclerView>
+            android:layout_below="@id/toolbar"
+            android:layout_margin="16dp"
+            android:scrollbars="vertical" />
     </RelativeLayout>
 
 </LinearLayout>
