--- a/myapp/app/src/main/res/layout/recipe_item.xml
+++ b/myapp/app/src/main/res/layout/recipe_item.xml
@@ -2,9 +2,9 @@
 <android.support.v7.widget.CardView  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     card_view:cardCornerRadius="4dp"
-    android:layout_margin="16dp">
+    android:layout_margin="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,21 +12,19 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/l_recipe_photo"
+            android:id="@+id/rv_recipe_photo"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_margin="8dp"
-            android:gravity="center"
+            android:layout_height="150dp"
+            android:layout_margin="2dp"
             android:src="@drawable/imgtest" />
 
         <TextView
-            android:id="@+id/l_recipe_name"
-            android:layout_margin="8dp"
+            android:id="@+id/rv_recipe_name"
+            android:layout_margin="2dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textSize="26sp"
+            android:textSize="14sp"
             android:textColor="@color/colorAccent"
             android:textAllCaps="true"
             android:text="@string/name_recipe"
