--- a/myapp/app/src/main/res/layout/activity_open_recipe.xml
+++ b/myapp/app/src/main/res/layout/activity_open_recipe.xml
@@ -146,7 +146,13 @@
 
                 </LinearLayout>
 
-                
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_recipe_ingredients"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:scrollbars="vertical" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
