--- a/myapp/app/src/main/res/layout/activity_home.xml
+++ b/myapp/app/src/main/res/layout/activity_home.xml
@@ -1,33 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/home_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
-    tools:context="com.example.luanna.myapp.Home"
-    android:id="@+id/home_content">
+    tools:context="com.example.luanna.myapp.Home">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <ImageButton
-            android:layout_margin="8dp"
             android:id="@+id/btn_recipes"
             android:layout_width="match_parent"
             android:layout_height="88dp"
-            android:background="@drawable/btn_recipes"/>
+            android:layout_margin="8dp"
+            android:background="@drawable/btn_recipes" />
 
         <ImageButton
             android:id="@+id/btn_ingredients"
             android:layout_width="match_parent"
             android:layout_height="88dp"
             android:layout_margin="8dp"
-            android:background="@drawable/btn_ingredients"/>
+            android:background="@drawable/btn_ingredients" />
 
     </LinearLayout>
 
