--- a/myapp/app/src/main/res/layout/recipe_ingredient_item.xml
+++ b/myapp/app/src/main/res/layout/recipe_ingredient_item.xml
@@ -10,15 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:columnCount="3"
-        android:padding="8dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="8dp">
 
         <TextView
             android:id="@+id/rv_ingredient_name"
             android:layout_columnSpan="2"
             android:layout_gravity="fill"
-            android:text="@string/app_ingredients"
             android:padding="4dp"
+            android:text="@string/app_ingredients"
             android:textSize="16dp" />
 
         <TextView
@@ -26,7 +26,6 @@
             android:layout_columnSpan="1"
             android:hint="@string/quantity"
             android:padding="4dp"
-            android:textSize="16dp"
-            />
+            android:textSize="16dp" />
     </GridLayout>
-</android.support.v7.widget.CardView >
+</android.support.v7.widget.CardView>
