--- a/myapp/app/src/main/res/layout/recipe_item.xml
+++ b/myapp/app/src/main/res/layout/recipe_item.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView  xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    card_view:cardCornerRadius="4dp"
-    android:layout_margin="2dp">
+    android:layout_margin="2dp"
+    card_view:cardCornerRadius="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,16 +20,16 @@
 
         <TextView
             android:id="@+id/rv_recipe_name"
-            android:layout_margin="2dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="2dp"
             android:gravity="center"
-            android:textSize="14sp"
-            android:textColor="@color/colorAccent"
-            android:textAllCaps="true"
             android:text="@string/name_recipe"
+            android:textAllCaps="true"
+            android:textColor="@color/colorAccent"
+            android:textSize="14sp"
             android:textStyle="bold" />
 
     </LinearLayout>
 
-</android.support.v7.widget.CardView >
+</android.support.v7.widget.CardView>
