--- a/myapp/app/src/main/res/layout/activity_ingredients.xml
+++ b/myapp/app/src/main/res/layout/activity_ingredients.xml
@@ -20,11 +20,47 @@
             app:title="@string/app_ingredients"
             app:titleTextColor="@color/colorWhite" />
 
+        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/ingredients_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/toolbar"
+            android:columnCount="4"
+            android:orientation="horizontal"
+            android:padding="8dp"
+            android:rowCount="4">
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_columnSpan="2"
+                android:layout_gravity="fill"
+                android:layout_margin="8dp"
+                android:text="@string/name_ingredient"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_columnSpan="1"
+                android:layout_gravity="fill"
+                android:layout_margin="8dp"
+                android:text="@string/quantity"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_columnSpan="1"
+                android:layout_gravity="fill"
+                android:layout_margin="8dp"
+                android:text="@string/price"
+                android:textSize="16sp" />
+
+        </GridLayout>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_ingredients"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/toolbar"
+            android:layout_below="@id/ingredients_header"
             android:layout_margin="16dp"
             android:scrollbars="vertical" />
     </RelativeLayout>
